--- a/src/App.css
+++ b/src/App.css
@@ -29,18 +29,30 @@ img {
   margin: auto;
   padding: 0 .75rem;
 }
-
-h1.main-title {
-  text-align: center;
-  font-family: "Satisfy", cursive;
-  font-weight: 400;
-  font-size: 2rem;
-  font-style: normal;
+h1, h2, h3, h4, h5, h6 {
   color: var(--text-color-primary);
+}
+h1.main-title {
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  padding-bottom: 2rem;
+  background-image: url(./images/pexels-itsmeseher-42035630-11951521.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
+  text-align: center;
+  font-family: "Playwrite DE Grund", cursive;
+  font-weight: 800;
+  font-size: 2.5rem;
+  font-style: normal;
+  color: #fff;
   margin: 2rem 0;
+  background-color: #971818;
 }
 h2 {
-  font-family: "Satisfy", cursive;
+  font-family: "Playwrite DE Grund", cursive;
   font-size: 1.5rem;
   margin: 2rem 0;
 }
@@ -86,16 +98,32 @@ p {
   text-decoration: none;
   color: #939295;
   font-size: 1rem;
+  transition: all 0.5s ease-out;
 }
-/* .primary-nav {
-  display: none;
-} */
+.primary-nav a:hover {
+  color: #982c2c;
+}
+.rsvp {
+  background-color:#4e4d4d;
+  padding: .25rem 1rem;
+  color: #e3e3e3 !important;
+}
+a.rsvp:hover {
+  color:#982c2c !important;
+}
+i {
+  color: var(--text-color-primary);
+}
+i:hover {
+  color: #982c2c;
+}
 button.btn-nav {
   border: none;
   background: transparent;
   cursor: pointer;
   max-width: 450px;
 }
+
 .btn-close {
   position: absolute;
   top: 2px;
@@ -129,11 +157,25 @@ button.btn-nav{
   grid-template-columns: 1fr 1fr 1fr;
 }
 
+.rsvp-form {
+  border: 1px solid #982c2c;
+  /* width: 100%; */
+}
+.rsvp-form > * {
+  border-radius: 4px;
+}
+.rsvp-form input {
+  width: 100%;
+  max-width: 400px;
+  padding: .4rem .5rem;
+  border: 1px solid #982c2c
+}
 .footer {
   background-color: #d0cece;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  padding: 2rem 0;
 }
 .footer div {
   min-width: 260px;
@@ -175,6 +217,9 @@ button.btn-nav{
     max-width: 480px;
     padding: .4rem;
     margin: 1rem 0;
+  }
+  h1.main-title {
+    font-size: 1rem;
   }
   .venu-timing {
     display: grid;
