--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Glass+Antiqua&display=swap');
 body {
   margin: 0;
   padding: 0;
