--- a/src/App.css
+++ b/src/App.css
@@ -35,21 +35,22 @@ h1, h2, h3, h4, h5, h6 {
 h1.main-title {
   height: 200px;
   display: flex;
-  justify-content: center;
-  align-items: end;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: start;
   padding-bottom: 2rem;
   background-image: url(./images/pexels-itsmeseher-42035630-11951521.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: right;
   text-align: center;
-font-family: "Glass Antiqua", cursive;
+  font-family: "Glass Antiqua", cursive;
   font-weight: 800;
   font-size: 3rem;
   font-style: normal;
   color: #fff;
   /* margin: 2rem 0; */
-  background-color: #971818;
+  /* background-color: #971818; */
   text-transform: uppercase;
 }
 h2 {
@@ -103,15 +104,26 @@ p {
   transition: all 0.5s ease-out;
 }
 .primary-nav a:hover {
-  color: #982c2c;
+  color: #000000;
 }
 .rsvp {
-  background-color:#4e4d4d;
+  background-color:#000000;
   padding: .25rem 1rem;
-  color: #e3e3e3 !important;
+  color: #939295 !important;
+}
+.form-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.form-field {
+  width: 100%;
+  max-width: 480px;
+  display: flex;
+  flex-direction: column;
 }
 a.rsvp:hover {
-  color:#982c2c !important;
+  color:#ffffff !important;
 }
 i {
   color: var(--text-color-primary);
@@ -174,22 +186,22 @@ button.btn-nav{
   flex-direction: column;
   justify-content: flex-start;
 }
-.rsvp-form {
-  border: 1px solid #982c2c;
-  /* width: 100%; */
-}
+
 .rsvp-form > * {
   border-radius: 4px;
 }
 .rsvp-form .form-field {
   display: flex;
   flex-direction: column;
+  align-items: stretch;
+  text-align: left;
+  margin: .5rem 0;
 }
 .rsvp-form input {
-  /* width: 100%; */
   max-width: 400px;
   padding: .4rem .5rem;
-  border: 1px solid #982c2c
+  border: 1px solid #982c2c;
+  outline:rgba(142, 142, 142, 0);
 }
 .footer {
   background-color: #d0cece;
@@ -214,9 +226,10 @@ button.btn-nav{
     flex-direction: column;
     align-items: flex-start;
     width: 50%;
-    background-color: #e3e3e3;
+    background-color: #ffffff;
     padding: 2.4rem;
     height: 100%;
+    z-index: 900;
   }
   .primary-nav.closed {
     display: none;
@@ -240,8 +253,26 @@ button.btn-nav{
     margin: 1rem 0;
   }
   h1.main-title {
-    font-size: 1.5rem;
-    background-image: url(./images/pexels-itsmeseher-42035630-11951521\ -\ mobile.jpg);
+    /* width: 50%; */
+    font-size: 2.5rem;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background-image: url(./images/amaldene-leighton-01-bw.jpeg);
+    background-size: auto ;
+    background-size: 100%;
+    background-position: bottom right;
+    color: #fff;
+    text-align: left;
+  }
+  h1.main-title::before {
+    content: "Our Big Day...!";
+    width: 50%;
+    font-size: 4rem;
+    text-align: center;
+    display: flex;
+    justify-content: end;
+    position: relative;
+    right: 50;
   }
   .venu-timing {
     display: grid;
